Introduce color engine.
Color engine is a system which allows changing the primary
and accent colors of the device theme on-the-fly.

Colors and design by @arzbhatia

The following primary colors are supported:
* White (android default)
* Grey
* Pixel
* Dark

The following accent colors are supported:
* Blue
* Red
* Teal/Default
* Orange
* Green
* Yellow
* Purple
* Pink
* Cyan
* Grey

Ticket: NOUGAT-19

Change-Id: I69347616e2e61e805647c2e1a3f3c4578f42847f
Signed-off-by: @Thecrazyskull <anaskarbila@aospa.co>
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/packages/SystemUI/res/values/custom_colors.xml
+++ b/packages/SystemUI/res/values/custom_colors.xml
@@ -29,4 +29,7 @@
     <!-- OmniJaws detailed view temperature text -->
     <color name="omni_jaws_detailed_temperature_color">@android:color/white</color>
 
+    <!-- pixel theme -->
+    <color name="pixel_primary_color">#242424</color>
+
 </resources>
